--- a/public/css/construction.css
+++ b/public/css/construction.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #49B867;
+    background-color: purple;
     color: #E0E0E0;
     font-family: 'Raleway', sans-serif;
     text-align: center;
